--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
         context.fillText("Original image will go here", 10, 20);
       </script>
       <canvas id="myCanvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
-      <script> /* This script initiates the cavas and puts the text on the canvas "myCanvas" */
+      <script> /* This script initiates the canvas and puts the text on the canvas "myCanvas" */
         var canvas = document.getElementById('myCanvas');
         var context = canvas.getContext("2d");
         context.font = '20pt Calibri';
         context.fillStyle = "black";
-        context.fillText("New Image", 400, 20);
+        context.fillText("New Image", 700, 20);
       </script>
 
     </div><!-- /content -->
