--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
         context.fillStyle = "black";
         context.fillText("Original image will go here", 10, 20);
       </script>
-      <canvas id="myCanvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
-      <script> /* This script initiates the canvas and puts the text on the canvas "myCanvas" */
-        var canvas = document.getElementById('myCanvas');
+      <canvas id="canvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
+      <script> /* This script initiates the canvas and puts the text on the canvas "canvas" */
+        var canvas = document.getElementById('canvas');
         var context = canvas.getContext("2d");
         context.font = '20pt Calibri';
         context.fillStyle = "black";
