--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
         </script>
       <canvas id="canvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
       <script> /* This script initiates the canvas and puts the text on the canvas "canvas" */
-        var canvas = document.getElementById('canvas');
-        var context = canvas.getContext("2d");
-        context.font = '20pt Calibri';
-        context.fillStyle = "black";
-        context.fillText("New Image", 10, 20);
+        var canvas2 = document.getElementById('canvas');
+        var context2 = canvas.getContext("2d");
+        context2.font = '20pt Calibri';
+        context2.fillStyle = "black";
+        context2.fillText("New Image", 10, 20);
       </script>
 
     </div><!-- /content -->
