--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         context.fillStyle = "black";
         context.fillText("Original image will go here", 10, 20);
         </script>
-      <canvas id="canvas" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
+      <canvas id="canvas2" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
       <script> /* This script initiates the canvas and puts the text on the canvas "canvas" */
         var canvas2 = document.getElementById('canvas');
         var context2 = canvas.getContext("2d");
