--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
         context.fillText("Original image will go here", 10, 20);
         </script>
       <canvas id="canvas2" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
-      <script> /* This script initiates the canvas and puts the text on the canvas "canvas" */
-        var canvas2 = document.getElementById('canvas');
+      <script> /* This script initiates the canvas and puts the text on the canvas "canvas2" */
+        var canvas2 = document.getElementById('canvas2');
         var context2 = canvas.getContext("2d");
         context2.font = '20pt Calibri';
         context2.fillStyle = "black";
