--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <canvas id="canvas2" width=600 height=500 style="border:1px solid #d3d3d3;"></canvas>
       <script> /* This script initiates the canvas and puts the text on the canvas "canvas2" */
         var canvas2 = document.getElementById('canvas2');
-        var context2 = canvas.getContext("2d");
+        var context2 = canvas2.getContext("2d");
         context2.font = '20pt Calibri';
         context2.fillStyle = "black";
         context2.fillText("New Image", 10, 20);
