--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         var context2 = canvas2.getContext("2d");
         context2.font = '20pt Calibri';
         context2.fillStyle = "black";
-        context2.fillText("New Image", 10, 20);
+        context2.fillText("New Image", 10, 20)
       </script>
 
     </div><!-- /content -->
